--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,6 @@ testpaths = ["tests"]
 [tool.coverage.run]
 omit = ["tests/*", "data/*", "artifacts/*"]
 
-[tool.hatchling.build]
+[tool.hatchling.build.targets.wheel]
 packages = ["src/vla_training"]
 
