--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,5 @@ rich>=13.7.0,<13.8.0
 pyyaml>=6.0.0,<7.0.0
 typing-extensions>=4.11.0,<5.0.0
 huggingface_hub>=0.34.2,<0.36.0
-transformers>=4.44.0,<4.46.0
+transformers==4.45.2
 
